# type-erasure

./: .gitignore  CMakeLists.txt  CMakeSettings.json  type-erasure.sln
any/: any.hpp  any.vcxproj  main.cpp
any-safe/: any-safe.vcxproj  any-safe.vcxproj.filters  any.hpp  main.cpp
function/: function.hpp  function.vcxproj  function.vcxproj.filters  main.cpp
function-ref/: function-ref.vcxproj  function-ref.vcxproj.filters  function_ref.hpp  main.cpp
src/any/: CMakeLists.txt  any.hpp
src/any-safe/: CMakeLists.txt
src/function/: CMakeLists.txt
src/function-ref/: CMakeLists.txt  function_ref.hpp  main.cpp
type-erasure/: type-erasure.vcxproj
